--- a/views/verify.html
+++ b/views/verify.html
@@ -14,11 +14,11 @@
 
     <header>
       <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="./pag3.html">
+        <a class="navbar-brand" href="./validate.html">
         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="text-center text-up"><a href="#">Sing Up</a></div>
-        <div class="text-center text-join"><a href="#">Join now for free ride credit</a></div>
+        <div class="text-center txtsignup"><a href="#">Sing Up</a></div>
+        <div class="text-center txtjoin"><a href="#">Join now for free ride credit</a></div>
         <div class="text-center line"></div>
       </nav>
     </header>
