--- a/views/validate.html
+++ b/views/validate.html
@@ -8,56 +8,42 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/main.css">
-  <title>Sign Up</title>
+  <title>validate</title>
 
   <body>
-
     <header>
       <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="../index.html">
+        <a class="navbar-brand" href="./signup.html">
         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </a>
         <div class="text-center txtsignup"><a href="#">Sing Up</a></div>
-        <div class="text-center txtjoin"><a href="#">Join now for free ride credit</a></div>
+        <div class="text-center txtjoin"><a href="#">Verify phone number</a></div>
         <div class="text-center line"></div>
       </nav>
     </header>
-
     <section>
       <div class="container">
-
         <div class="row">
-          <div class="col-xs-2 col-xs-offset-1">
-            <div class="btn-group">
-              <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img src="http://www.countryflags.io/mx/flat/48.png">
-              <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href=""><img src="http://www.countryflags.io/co/flat/48.png"></a></li>
-                <li><a href=""><img src="http://www.countryflags.io/ca/flat/48.png"></a></li>
-                <li><a href=""><img src="http://www.countryflags.io/us/flat/48.png"></a></li>
-              </ul>
-
-            </div>
+          <div class="col-xs-3 col-xs-offset-3">
+            <div class="lead"><strong>LAB -</strong></div>
           </div>
-          <div class="col-xs-7 col-xs-offset-1 box-phone">
+          <div class="col-xs-4">
             <div class="input-group">
-              <span class="input-group-btn"><button class="btn btn-default" id="input" type="button">52</button></span>
-              <input class="form-control input-lg" id="inphone" type="text" placeholder="10 digitos" required>
+              <input class="form-control input-lg" id="incode" type="text" placeholder="Code">
             </div>
           </div>
         </div>
       </div>
-      <p class="lead text-center">We´ll send a text to verify your phone</p>
+      <p class="lead text-center">Enter the code sent to +52</p>
+      <div class="text-center">
+        <a href="" id="reset" class="btn btn-default active" role="button">Resend Code</a>
+      </div>
       <div class="row">
         <div class="text-center">
-          <a href="./validate.html" class="btn btn-default btn-lg active btnnext" role="button" id="btnnext">Next</a>
+          <a href="./verify.html" id="btnNext1" class="btn btn-default btn-lg active btn-next disabled" role="button" disabled>Next</a>
         </div>
       </div>
     </section>
-
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
