--- a/views/validate.html
+++ b/views/validate.html
@@ -40,7 +40,7 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <a href="./verify.html" id="btnNext1" class="btn btn-default btn-lg active btn-next disabled" role="button" disabled>Next</a>
+          <a href="./verify.html" id="btnnext1" class="btn btn-default btn-lg btnnext active disabled" role="button" disabled>Next</a>
         </div>
       </div>
     </section>
