--- a/views/signup.html
+++ b/views/signup.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="./principal.html">
         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="text-center txtsignup"><a href="#">Sing Up</a></div>
+        <div class="text-center txtsignup"><a href="#">Sign Up</a></div>
         <div class="text-center txtjoin"><a href="#">Join now for free ride credit</a></div>
         <div class="text-center line"></div>
       </nav>
@@ -29,14 +29,14 @@
           <div class="col-xs-2 col-xs-offset-1">
             <div class="btn-group" id="flagcont">
               <button id="lada" class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div id="mapa">-</div>
+                <div id="map">-</div>
               </button>
             </div>
             <div>
               <select id="menuflags" onChange="ver_imagen(this.value);">
-                <option value="opt">Selecciona..</option>
+                <option value="opt">Select....</option>
                 <option value="chile">Chile</option>
-                <option value="mexico">México</option>
+                <option value="mexico">Mexico</option>
                 <option value="peru">Perú</option>
               </select>
             </div>
@@ -45,7 +45,7 @@
             <div class="input-group">
               <span class="input-group-btn">
                 <button class="btn btn-default" id="input" type="button">
-                  <div id="clave">-</div>
+                  <div id="code">-</div>
                 </button>
               <input class="form-control input-lg" id="inphone" type="text" placeholder="10 digitos" required>
              </span>
