--- a/views/validate.html
+++ b/views/validate.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="./signup.html">
         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="text-center txtsignup"><a href="#">Sing Up</a></div>
+        <div class="text-center txtsignup"><a href="#">Sign Up</a></div>
         <div class="text-center txtjoin"><a href="#">Verify phone number</a></div>
         <div class="text-center line"></div>
       </nav>
@@ -40,7 +40,7 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <a href="./verify.html" id="btnnext1" class="btn btn-default btn-lg btnnext active disabled" role="button" disabled>Next</a>
+          <a href="./verify.html" id="btnnext1" class="btn btn-default btn-lg btnnext disabled" role="button" disabled>Next</a>
         </div>
       </div>
     </section>
