--- a/views/verify.html
+++ b/views/verify.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="./validate.html">
         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="text-center txtsignup"><a href="#">Sing Up</a></div>
+        <div class="text-center txtsignup"><a href="#">Sign Up</a></div>
         <div class="text-center txtjoin"><a href="#">Join now for free ride credit</a></div>
         <div class="text-center line"></div>
       </nav>
@@ -31,15 +31,15 @@
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-btn"><button class="btn btn-default"  type="button"><i class="fa fa-user-o" aria-hidden="true"></i></button></span>
-                  <input type="text" class="form-control" id="iname" placeholder="Nombre" aria-describedby="sizing-addon2" required>
-                  <input type="text" class="form-control" id="ilastnm" placeholder="Apellido" aria-describedby="sizing-addon2" required>
+                  <input type="text" class="form-control" id="iname" placeholder="Name" aria-describedby="sizing-addon2" required>
+                  <input type="text" class="form-control" id="ilastnm" placeholder="Last name" aria-describedby="sizing-addon2" required>
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-btn"><button class="btn btn-default"  type="button"><i class="fa fa-envelope-o" aria-hidden="true"></i></button></span>
                   <input id="emailAdress" type="email" class="form-control" placeholder="Email" required pattern=".+@gmail.com"
-                    title="Ingresa correos de GMAIL solamente">
+                    title="Enter a Google mail, only">
                 </div>
               </div>
 
@@ -53,7 +53,7 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <a id="signupval" class="btn btn-default btn-lg active btn-next disabled" role="button" type="submit">Sign up</a>
+          <a id="signupval" class="btn btn-default btn-lg btn-next active" role="button" type="submit">Sign up</a>
         </div>
       </div>
     </section>
