--- a/views/verify2.html
+++ b/views/verify2.html
@@ -17,8 +17,8 @@
         <a class="navbar-brand" href="./principal.html">
         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="text-center txtsignup"><a href="#">Sing Up</a></div>
-        <div class="text-center txtjoin"><a href="#">Join now for free ride credit</a></div>
+        <div class="text-center txtsignup"><a href="#">Log in</a></div>
+        <div class="text-center txtjoin"><a href="#">Go for a ride!!</a></div>
         <div class="text-center line"></div>
       </nav>
     </header>
@@ -31,8 +31,8 @@
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-btn"><button class="btn btn-default"  type="button"><i class="fa fa-user-o" aria-hidden="true"></i></button></span>
-                  <input type="text" class="form-control" id="inameN" placeholder="Nombre" aria-describedby="sizing-addon2" required>
-                  <input type="text" class="form-control" id="ilastnmN" placeholder="Apellido" aria-describedby="sizing-addon2" required>
+                  <input type="text" class="form-control" id="inameN" placeholder="Name" aria-describedby="sizing-addon2" required>
+                  <input type="text" class="form-control" id="ilastnmN" placeholder="Last name" aria-describedby="sizing-addon2" required>
                 </div>
               </div>
               <div class="form-group">
@@ -43,17 +43,17 @@
                 </div>
               </div>
 
-              <div class="custom-control custom-checkbox">
+              <!-- <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label>I agree to Lyft's <a href="#">Terms of Service.</a></label>
-              </div>
+                <label>Remember me</label>
+              </div> -->
           </div>
           </form>
         </div>
       </div>
       <div class="row">
         <div class="text-center">
-          <a id="signupval2" class="btn btn-default btn-lg active btn-next disabled" role="button" type="submit">Sign up</a>
+          <a id="signupval2" class="btn btn-default btn-lg btn-next active" role="button" type="submit">Log in</a>
         </div>
       </div>
     </section>
